# CowAgent

./: CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  app.py  config-template.json  config.py  pyproject.toml  requirements.txt  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1.bug.yml  2.feature.yml  (+1 more)
agent/: admin.py  registry.py  routing.py
bridge/: agent_bridge.py  agent_initializer.py  bridge.py
channel/: channel.py  channel_factory.py  chat_channel.py
cli/: cli.py  utils.py
common/: cloud_client.py  const.py  i18n.py  tmp_dir.py  utils.py
cowagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docker/: docker-compose.yml
docs/: README.md  docs.json
models/: bot_factory.py  custom_provider.py  openai_compatible_bot.py
plugins/: plugins.json  source.json
scripts/: run.ps1
skills/: skills_config.json
tests/: eval_mcp_tool_retrieval.py  test_agent_admin.py  test_agent_delegation.py  test_agent_registry.py  test_agent_routing.py  test_agent_web_management.py  test_bash_config_propagation.py  test_cli_backup.py  test_custom_provider.py  test_dashscope_provider.py  test_evolution.py  test_feishu_scheduler_card.py  test_invariant_bash.py  test_invariant_provider.py  test_minimax_provider.py  test_models_handler.py  test_multi_agent_docs.py  test_multi_agent_runtime.py  test_multi_agent_state_isolation.py  test_multi_agent_tmp_isolation.py  test_multi_agent_tool_isolation.py  test_qianfan_provider.py  test_scheduler_run_now.py  test_search_files.py  test_security_ssrf_path_traversal.py
voice/: factory.py
(+307 files in other folders)
